@@ -34325,26 +34325,8 @@ literal|null
 operator|&&
 name|callerContext
 operator|.
-name|isValid
+name|isContextValid
 argument_list|()
-operator|&&
-operator|(
-name|callerContext
-operator|.
-name|getSignature
-argument_list|()
-operator|==
-literal|null
-operator|||
-name|callerContext
-operator|.
-name|getSignature
-argument_list|()
-operator|.
-name|length
-operator|<=
-name|callerSignatureMaxLen
-operator|)
 condition|)
 block|{
 name|sb
@@ -34411,6 +34393,24 @@ name|getSignature
 argument_list|()
 operator|!=
 literal|null
+operator|&&
+name|callerContext
+operator|.
+name|getSignature
+argument_list|()
+operator|.
+name|length
+operator|>
+literal|0
+operator|&&
+name|callerContext
+operator|.
+name|getSignature
+argument_list|()
+operator|.
+name|length
+operator|<=
+name|callerSignatureMaxLen
 condition|)
 block|{
 name|sb
