@@ -1558,20 +1558,6 @@ argument_list|,
 name|time
 argument_list|)
 expr_stmt|;
-name|System
-operator|.
-name|out
-operator|.
-name|println
-argument_list|(
-literal|"LLLLLL"
-operator|+
-name|auditlog
-operator|.
-name|getOutput
-argument_list|()
-argument_list|)
-expr_stmt|;
 name|assertTrue
 argument_list|(
 name|auditlog
@@ -1754,6 +1740,75 @@ literal|128
 argument_list|)
 operator|+
 literal|":L\n"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|auditlog
+operator|.
+name|clearOutput
+argument_list|()
+expr_stmt|;
+comment|// empty context is ignored
+name|context
+operator|=
+operator|new
+name|CallerContext
+operator|.
+name|Builder
+argument_list|(
+literal|""
+argument_list|)
+operator|.
+name|setSignature
+argument_list|(
+literal|"L"
+operator|.
+name|getBytes
+argument_list|(
+name|CallerContext
+operator|.
+name|SIGNATURE_ENCODING
+argument_list|)
+argument_list|)
+operator|.
+name|build
+argument_list|()
+expr_stmt|;
+name|CallerContext
+operator|.
+name|setCurrent
+argument_list|(
+name|context
+argument_list|)
+expr_stmt|;
+name|LOG
+operator|.
+name|info
+argument_list|(
+literal|"Set empty caller context"
+argument_list|)
+expr_stmt|;
+name|fs
+operator|.
+name|setTimes
+argument_list|(
+name|p
+argument_list|,
+name|time
+argument_list|,
+name|time
+argument_list|)
+expr_stmt|;
+name|assertFalse
+argument_list|(
+name|auditlog
+operator|.
+name|getOutput
+argument_list|()
+operator|.
+name|contains
+argument_list|(
+literal|"callerContext="
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -2107,7 +2162,7 @@ operator|.
 name|clearOutput
 argument_list|()
 expr_stmt|;
-comment|// caller context with too long signature is abandoned
+comment|// too long signature is ignored
 name|context
 operator|=
 operator|new
@@ -2160,16 +2215,16 @@ argument_list|,
 name|time
 argument_list|)
 expr_stmt|;
-name|assertFalse
+name|assertTrue
 argument_list|(
 name|auditlog
 operator|.
 name|getOutput
 argument_list|()
 operator|.
-name|contains
+name|endsWith
 argument_list|(
-literal|"callerContext="
+literal|"callerContext=setTimes\n"
 argument_list|)
 argument_list|)
 expr_stmt|;
